[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "drekar-launch-process"
version = "0.1.3"
authors = [
    {name = "John Wason", email = "wason@wasontech.com"}
]
description = "Client library for drekar-launch"
license = {text = "Apache-2.0"}
requires-python = ">=3.6"
readme = "README.md"

[tool.setuptools]
py-modules = [
    "drekar_launch_process"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pywin32;platform_system=='Windows'"
]
